[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/controller_icons/objects/TextureRect.gd" type="Script" id=1]
[ext_resource path="res://addons/controller_icons/assets/key/shift_alt.png" type="Texture2D" id=2]
[ext_resource path="res://scenes/popups/first_time/DoneSection.gd" type="Script" id=3]
[ext_resource path="res://addons/controller_icons/assets/key/esc.png" type="Texture2D" id=4]
[ext_resource path="res://scenes/ui_nodes/AccessibilityFocus.gd" type="Script" id=5]

[node name="DoneSection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="IntroLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
offset_top = 175.0
offset_right = 1024.0
offset_bottom = 274.0
size_flags_vertical = 14
text = "All set! You can now add games to your library and customize RetroHub to your liking.

RetroHub comes with a default, simple theme for picking games. But there are many more themes for you to discover!

Explore, customize, and create the ultimate retro gaming library setup!
"
align = 1
valign = 1
autowrap = true

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/IntroLabel"]
script = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 395.0
offset_right = 1024.0
offset_bottom = 435.0
size_flags_vertical = 6

[node name="ButtonsPrompt" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 273.0
offset_right = 751.0
offset_bottom = 40.0
size_flags_horizontal = 6
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ButtonsPrompt"]
offset_top = 13.0
offset_right = 35.0
offset_bottom = 27.0
size_flags_horizontal = 0
text = "Press"
align = 1

[node name="ControllerTextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/ButtonsPrompt"]
offset_left = 39.0
offset_right = 79.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 40, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true
script = ExtResource( 1 )
path = "rh_menu"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/ButtonsPrompt"]
offset_left = 83.0
offset_top = 13.0
offset_right = 265.0
offset_bottom = 27.0
size_flags_horizontal = 0
text = "to open the main menu, and"

[node name="ControllerTextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer/ButtonsPrompt"]
offset_left = 269.0
offset_right = 309.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 40, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
expand = true
script = ExtResource( 1 )
path = "rh_theme_menu"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/ButtonsPrompt"]
offset_left = 313.0
offset_top = 13.0
offset_right = 478.0
offset_bottom = 27.0
size_flags_horizontal = 0
text = "to open the theme menu."

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/HBoxContainer/ButtonsPrompt"]
script = ExtResource( 5 )

[node name="NextButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
offset_top = 556.0
offset_right = 1024.0
offset_bottom = 576.0
text = "Let's Go!"

[connection signal="pressed" from="VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
